syntax = "proto3";


package address;

message IsAccounts  {
  repeated IsAccount is_accounts = 1;
}

message IsAccount {
    string id = 1;
    bool is_contract = 2;
}

message AddressTxs {
    repeated AddressTx address_txs = 1; 
}

message AddressTx {
  string address = 1;
}

message Addresses {
  repeated Address addresses = 1;
}

message Address {
  string id = 1;
  bool is_contract = 2;
  uint64 num_txs = 3;
}






